force-app/main/default/objects/Inventory__c/fields/Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Record_Number__c</fullName>
    <displayFormat>INV-{0000}</displayFormat>
    <label>Record Number</label>
    <type>AutoNumber</type>
</CustomField>