force-app/main/default/objects/Inventory__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <description>This allows numerical comparisons like &gt; 10 in the formula.</description>
    <formula>IF(Stock_Quantity__c &gt; 10, &quot;Available&quot;, &quot;Low Stock&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This allows numerical comparisons like &gt; 10 in the formula.</inlineHelpText>
    <label>Stock Status</label>
    <type>Text</type>
</CustomField>